# SnapPay-online-payments-Solution

./: .env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fd5682335ea4_first_migration.py
src/core/: config.py  security.py
src/database/: session.py
src/dependencies/: auth.py
src/exceptions/: custom_exceptions.py
src/model/: account.py  bank_account.py  transaction.py  user.py  wallets.py
src/repository/: auth.py  user.py
src/router/: auth.py
src/schema/: auth.py  user.py
src/service/: auth.py
src/utils/: loggers.py
