[project]
name = "dontpay"
version = "0.1.0"
description = ""
authors = [
    {name = "Amogh Shukla",email = "amoghshukla548@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
