[project]
name = "dontpay"
version = "0.1.0"
description = ""
authors = [
    {name = "Amogh Shukla",email = "amoghshukla548@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
